  - fixed search of generated files on macOS for some Unicode file names
  - fixed selection of Python on macOS:
    - select the system Python 2 or 3 according to LilyPond's version
    - support MacPorts' LilyPond tools
    - add option to allow forcing the use of the tools' #! lines
      (useful for self-compiled or other nonstandard LilyPond installations)


Changes in 3.1.2 -- Easter 2020

* Bug fixes:
  - fixed #1255, AttributeError: 'NoneType' object has no attribute 'cursor'
  - fixed "Two Pages (first page right)" for both modes, other should be "left"
  - fixed pinch gesture zoom in music view on Mac
  - fixed #30, Printing score under Mac OS X
  - fixed #860, OSX: Frescobaldi overrides critical cursor navigation keyboard shortcuts;
    new shortcuts:
    - next document: ctrl+tab
    - previous document: ctrl+shift+tab
    - start of line: cmd+left
    - end of line: cmd+right
  - fixed #1087, File names in document tabs are not shown correctly on Mac
  - fixed #1272, Global menu with no windows on Mac is not working
  - fixed #1232, Error using convert-ly in Frescobaldi 3.1 Mac app
* Improvements:
  - add DE hyphen patterns and copyright info (#1275)
* Translations:
  - Userguide now has its own PO files in i18n/userguide, and the Frescobaldi
    application itself has the PO files in i18n/frescobaldi, see README-
    translations.
  - updated nl translation by Wilbert Berendsen
  - updated Italian translation by Davide Liessi


Changes in 3.1.1 -- January 4th, 2020

* Bug fixes:
  - fixed #1242, AttributeError: 'PopplerDocument' has no attribute 'ispresent'
  - fixed #1234, NameError: 'QPinchGesture' is not defined (pinch in music view)
  - fixed #1231, NameError: 'doc' is not defined (when printing on Mac OSX)


Changes in 3.1 -- December 27th, 2019

* Requirement changes:
  - Frescobaldi now requires Python3.3+
* New features:
  - New "Document Fonts" dialog supporting text and music fonts
    and providing a font sample previewer